sleeping-added code-broke some things

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+/* I commented these out but can't get them to work is there a work around to getting tailwind to work? */
